# SliderCombat

./: .gitignore  CMakeLists.txt  README.md  SliderCombat.sln  SliderCombat.vcxproj  SliderCombat.vcxproj.filters  build_html.sh  build_native.sh  packages.config  todo.txt
data/3dmodels/: materialtest.mtl  models.txt  powerups.mtl  projectiles.mtl  tank.mtl  tile0.mtl  tile8.mtl  tiles.mtl
data/fonts/: prototype_32.fnt
data/maps/: map1.tmx  map2.tmx  maps.txt  tiles.txt
ext/tinyobjloader/: tinyobjloader.cpp  tinyobjloader.h
ext/tmxparser/: TmxPolygon.cpp  TmxPolyline.cpp  TmxTileLayer.cpp
ext/tmxparser/base64/: base64.cpp  base64.h
src/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  EventManager.cpp  EventManager.h  Explosion.cpp  Explosion.h  Fire.cpp  Fire.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  Hud.cpp  Hud.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Map.cpp  Map.h  Math.cpp  Math.h  Model3d.cpp  Model3d.h  OpenGlResources.cpp  OpenGlResources.h  OpenGlWindow.cpp  OpenGlWindow.h  Pose.h  PowerUps.cpp  PowerUps.h  Projectile.cpp  Projectile.h  ResourcesManager.cpp  ResourcesManager.h  Slider.cpp  Slider.h  SliderControl.cpp  (+8 more)
src/gameobjects/: Explosion.cpp  Explosion.h  GameObject.h  PowerUps.cpp  PowerUps.h  Projectile.cpp  Projectile.h  Slider.cpp  Slider.h  SliderControl.cpp  SliderControl.h
src/graphics/: BitmapFont.cpp  BitmapFont.h  MatrixStack.cpp  MatrixStack.h  Model3d.cpp  Model3d.h  OpenGlProgram.cpp  OpenGlProgram.h  OpenGlRenderer.cpp  OpenGlRenderer.h  OpenGlResources.cpp  OpenGlResources.h  OpenGlState.cpp  OpenGlState.h  OpenGlWindow.cpp  OpenGlWindow.h  Scene.cpp  Scene.h
src/mathnphysics/: Collision.cpp  Math.cpp  Physics.h  Pose.h
src/utils/: Logger.cpp  Logger.h  Time.cpp  Time.h
test/: GeometryTest.cpp  GeometryTest.h  TestsMain.h
