cmake_minimum_required (VERSION 3.0)
project (SliderCombar)

set (CMAKE_CXX_FLAGS "--std=c++14 ${CMAKE_CXX_FLAGS} -DUSE_MINIZ")

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf)
PKG_SEARCH_MODULE(GLEW REQUIRED glew)
if (EMSCRIPTEN)
  message("Emscripten detected")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s LEGACY_GL_EMULATION=1 -s GL_FFP_ONLY=1 -s USE_SDL=2 -s USE_SDL_TTF=2")
endif(EMSCRIPTEN)

SET(GLM_INCLUDE_DIRS "/usr/include/glm")

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} "ext/tinyobjloader" "ext/tinyxml" "ext/tmxparser" )

FILE(GLOB_RECURSE MySources ext/*.cpp ext/*.c src/*.cpp test/*.cpp)

ADD_EXECUTABLE(SliderCombat ${MySources})
if (NOT EMSCRIPTEN)
  TARGET_LINK_LIBRARIES(SliderCombat ${GLEW_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2TTF_LIBRARIES})
endif(NOT EMSCRIPTEN)
